...

class SettingsViewModel with ChangeNotifier{

  final PageController _pageController = PageController(initialPage: 0, keepPage: false);
  final List<DropdownMenuItem<String>>? _languages =[
    const DropdownMenuItem(child: Text("Polski"), value: "pl"),
    const DropdownMenuItem(child: Text("English"), value: "en"),
  ];
  List<DropdownMenuItem<Map<String,dynamic>>> _colors = [
    DropdownMenuItem(child:const Text("Jasny"), value: CustomThemes.lightColors),
    DropdownMenuItem(child: const Text("Ciemny"), value: CustomThemes.darkColors,)
  ];

  String currentLanguage = ChangeLanguageProvider().currentLocale.toString();
  Map<String,dynamic> currentTheme = ThemeProvider().theme;

  List<DropdownMenuItem<String>>? get languages{
...
